SocialDynamo/media-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-api
spec:
  selector:
    matchLabels:
      app: media-api
  template:
    metadata:
      labels:
        app: media-api
    spec:
      containers:
        - name: media-api
          image: socialdynamorepo.azurecr.io/gmck/socialdynamo_mediaapi:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: secrets-media-inline
              mountPath: "/mnt/secrets-media"
              readOnly: true
            - name: secrets-base-inline
              mountPath: "/mnt/secrets-base"
              readOnly: true
            - name: config-volume
              mountPath: /app/Account/appsettings.json
              subPath: appsettings.json
      volumes:
      - name: secrets-media-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "sd-media-secrets"
          nodePublishSecretRef:                       
            name: secret-media-creds
      - name: secrets-base-inline
        csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: "sd-base-secrets"
          nodePublishSecretRef:                       
            name: secret-base-creds
      - name: config-volume
        configMap:
          name: appsettings-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: media-api
  labels:
    app: media-api
spec:
  type: ClusterIP
  selector:
    app: media-api
  ports:
    - port: 80
